--- a/SmartMemo/res/values/strings.xml
+++ b/SmartMemo/res/values/strings.xml
@@ -5,5 +5,12 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_sliding">SlidingActivity</string>
+    <string name="usertel">电话：</string>
+    <string name="text_age">年龄：</string>
+    <string name="text_sex">性别：</string>
+    <string name="text_pro">职业：</string>
+    <string name="text_hob">爱好：</string>
+    <string name="text_tel">电话：</string>
+    <string name="btn_save_setuser">保存我的信息</string>
 
 </resources>
