--- a/SmartMemo/res/values/strings.xml
+++ b/SmartMemo/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SmartMemo</string>
+    <string name="app_name">智慧备忘录</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_sliding">SlidingActivity</string>
